objects/LAT_BR_ClientChannelSegmentation__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_ActivitiesStartTime__c</fullName>
        <label>BR Activities Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time Happy Hour</fullName>
                </value>
                <value>
                    <fullName>For lunches/dinners</fullName>
                </value>
                <value>
                    <fullName>Late night</fullName>
                </value>
                <value>
                    <fullName>During the day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_AdultEntertainmentHouse__c</fullName>
        <label>BR Adult Entertainment House</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_ApprovalStatus__c</fullName>
        <label>BR Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Manager approval</fullName>
                </value>
                <value>
                    <fullName>Area Manager approval</fullName>
                </value>
                <value>
                    <fullName>Regional Manager approval</fullName>
                </value>
                <value>
                    <fullName>On Management approval</fullName>
                </value>
                <value>
                    <fullName>Commercial Development approval</fullName>
                </value>
                <value>
                    <fullName>Commercial Director approval</fullName>
                </value>
                <value>
                    <fullName>Controladoria approval</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_AreaManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field completed by trigger used by the Approval Process</description>
        <label>BR Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BR_Client_Channel_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_AverageMainMealPrice__c</fullName>
        <label>BR Average Main Meal Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to 50</fullName>
                </value>
                <value>
                    <fullName>Between 51 and 75</fullName>
                </value>
                <value>
                    <fullName>Between 76 and 125</fullName>
                </value>
                <value>
                    <fullName>Above 125</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_AverageSodaCansPrice__c</fullName>
        <label>BR Average Soda Cans Prices</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to 4</fullName>
                </value>
                <value>
                    <fullName>Above 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_Brigade__c</fullName>
        <label>BR Brigade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Trained</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_BusinessTargetAudience__c</fullName>
        <label>BR Business Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mostly Physical Persons</fullName>
                </value>
                <value>
                    <fullName>Small stores and final consumers</fullName>
                </value>
                <value>
                    <fullName>Mostly Legal Entities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_Client__c</fullName>
        <label>BR Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BR Client Channel Segmentations</relationshipLabel>
        <relationshipName>BR_Client_Channel_Segmentations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ConsumerProfile__c</fullName>
        <label>BR Consumer Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_FiscalBenefit__c</fullName>
        <label>BR Fiscal Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_HasCompetitorContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BR Has Competitor Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_IconicHouse__c</fullName>
        <label>BR Iconic House</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_IsKA__c</fullName>
        <label>BR Is KA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_Justificativa__c</fullName>
        <inlineHelpText>Este campo é de preenchimento obrigatório somente em caso de uma alteração de Segmentação para o cliente</inlineHelpText>
        <label>Justificativa</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_MainAttentionChannel__c</fullName>
        <label>BR Main Atention Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Spread between On Trade/Off Trade/Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_MainBillFocus__c</fullName>
        <label>BR Main Bill Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drinks with meals and snacks to complement</fullName>
                </value>
                <value>
                    <fullName>Meal with drinks to complement</fullName>
                </value>
                <value>
                    <fullName>Drink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_MainBrandsSold__c</fullName>
        <label>BR Main Brands Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ultra premium</fullName>
                </value>
                <value>
                    <fullName>Super premium</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Local/Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_MainConsumptionOccasion__c</fullName>
        <label>BR Main Consumption Occasion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Socializing among friends and Happy Hour</fullName>
                </value>
                <value>
                    <fullName>Fun with friends and flirting</fullName>
                </value>
                <value>
                    <fullName>Lunch/dinner</fullName>
                </value>
                <value>
                    <fullName>Fun/Dancing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_MainDrinks__c</fullName>
        <label>BR Main Drinks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne and wine</fullName>
                </value>
                <value>
                    <fullName>High quality cocktails</fullName>
                </value>
                <value>
                    <fullName>Caipiroskas/Energy drinks premium (imported)</fullName>
                </value>
                <value>
                    <fullName>Caipiroskas/Energy drinks standard (national)</fullName>
                </value>
                <value>
                    <fullName>Premium beer</fullName>
                </value>
                <value>
                    <fullName>National beer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_Music__c</fullName>
        <label>BR Music</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild or none</fullName>
                </value>
                <value>
                    <fullName>Starts quiet but its peak is to loud and agitated environment</fullName>
                </value>
                <value>
                    <fullName>Main attraction at high volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_ONSegment__c</fullName>
        <label>BR ON Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_ObtainedSubChannel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Bar agitado</fullName>
                </value>
                <value>
                    <fullName>Bar de hotel</fullName>
                </value>
                <value>
                    <fullName>Bar típico (cubano, forró, etc)</fullName>
                </value>
                <value>
                    <fullName>Casa de show</fullName>
                </value>
                <value>
                    <fullName>Churrascaria</fullName>
                </value>
                <value>
                    <fullName>Day club</fullName>
                </value>
                <value>
                    <fullName>Pub irlandês</fullName>
                </value>
                <value>
                    <fullName>Redes</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Casa noturna</fullName>
                </value>
                <value>
                    <fullName>Table dance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_ObtainedBusinessSize__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Obtained Business Size</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>19-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Channel Segmentations (BR Obtained Business Size)</relationshipLabel>
        <relationshipName>BR_Client_Channel_Segmentations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ObtainedChannel__c</fullName>
        <label>BR Obtained Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_ObtainedFiscalBenefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Obtained Fiscal Benefit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>21-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Channel Segmentations (BR Obtained Fiscal Benefit)</relationshipLabel>
        <relationshipName>BR_Client_Channel_Segmentations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ObtainedPriorityLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Obtained Priority Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>20-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Channel Segmentations (BR Obtained Priority Level)</relationshipLabel>
        <relationshipName>BR_Client_Channel_Segmentations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ObtainedProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Obtained Profile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>18-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Channel Segmentations (BR Obtained Profile)</relationshipLabel>
        <relationshipName>BR_Client_Channel_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ObtainedSegment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Obtained Segment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>03-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Channel Segmentations</relationshipLabel>
        <relationshipName>BR_ClientChannelSegmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ObtainedSubChannel__c</fullName>
        <label>BR Obtained Sub Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Atacadista</fullName>
                </value>
                <value>
                    <fullName>Canais Alternativos</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Night club</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Specialized Retail</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Table Dance</fullName>
                </value>
                <value>
                    <fullName>Casa Noturna</fullName>
                </value>
                <value>
                    <fullName>Bar Agitado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_PeopleCapacity__c</fullName>
        <label>BR People Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-100</fullName>
                </value>
                <value>
                    <fullName>101-300</fullName>
                </value>
                <value>
                    <fullName>301-400</fullName>
                </value>
                <value>
                    <fullName>401+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_PerformingArea__c</fullName>
        <label>BR Performing Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acts with area bounded by partner suppliers</fullName>
                </value>
                <value>
                    <fullName>Acts within the state but without a defined territory</fullName>
                </value>
                <value>
                    <fullName>Have sales team within 3 States without a defined territory</fullName>
                </value>
                <value>
                    <fullName>Own sales force in more than three states without a defined territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_PortfolioType__c</fullName>
        <label>BR Portfolio Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>F1 Popular Products</fullName>
                </value>
                <value>
                    <fullName>F2 Standard Products</fullName>
                </value>
                <value>
                    <fullName>F3 Premium Products</fullName>
                </value>
                <value>
                    <fullName>F4 Super Premium Products</fullName>
                </value>
                <value>
                    <fullName>F5 Products of all price ranges</fullName>
                </value>
                <value>
                    <fullName>I1 Popular Products</fullName>
                </value>
                <value>
                    <fullName>I2 Standard Products</fullName>
                </value>
                <value>
                    <fullName>I3 Premium Products</fullName>
                </value>
                <value>
                    <fullName>I4 Super Premium Products</fullName>
                </value>
                <value>
                    <fullName>I5 Products of all price ranges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_PubPhysicalSpace__c</fullName>
        <label>BR Pub Physical Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tables but there is good circulation area for interacting standing</fullName>
                </value>
                <value>
                    <fullName>Dance Floor</fullName>
                </value>
                <value>
                    <fullName>Tables and most people seated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field completed by trigger used by the Approval Process</description>
        <label>BR Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BR_Client_Channel_Segmentations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_RelationshipLevel__c</fullName>
        <label>BR Relationship Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Complement</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Trading Brands</fullName>
                </value>
                <value>
                    <fullName>Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_SKUCategoriesAmount__c</fullName>
        <label>BR SKU Categories Amount</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Reduced categories number and less than 1000 SKUs</fullName>
                </value>
                <value>
                    <fullName>High categories number and less than 1000 SKUs</fullName>
                </value>
                <value>
                    <fullName>Reduced categories number and more than 1000 SKUs</fullName>
                </value>
                <value>
                    <fullName>High categories number and more than 1000 SKUs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_StoreScope__c</fullName>
        <label>BR Store Scope</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Independent local shop range</fullName>
                </value>
                <value>
                    <fullName>Network or regional reach store (2 to 3 Cities States)</fullName>
                </value>
                <value>
                    <fullName>National Network of range (with stores in more than 2 regions of Brazil)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_StoreSizeDetail__c</fullName>
        <label>BR Store Size Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_StoreSize__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>Convenience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_StoreSize__c</fullName>
        <label>BR Stores Size</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Different sizes</fullName>
                </value>
                <value>
                    <fullName>More than 10 cks</fullName>
                </value>
                <value>
                    <fullName>From 5 to 9 cks</fullName>
                </value>
                <value>
                    <fullName>From 1 to 4 cks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_StoresTypes__c</fullName>
        <label>BR Stores Types</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_BR_BusinessTargetAudience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Service with stores in large format and low level of service</fullName>
                </value>
                <value>
                    <fullName>Self-Service with stores of different formats</fullName>
                </value>
                <value>
                    <fullName>Self-Service with stores specializing in a limited number of categories</fullName>
                </value>
                <value>
                    <fullName>Shops in virtual format on the internet</fullName>
                </value>
                <value>
                    <fullName>Integrated Shops Petrol stations with focus on convenience items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_TriggerInUsage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used internally only, to validate a trigger is updating the object (used for validationrules overriding for instance)</description>
        <inlineHelpText>Used internally only, to validate a trigger is updating the object (used for validationrules overriding for instance)</inlineHelpText>
        <label>LAT_TriggerInUsage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BR Client Channel Segmentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_BR_ApprovalStatus__c</columns>
        <columns>LAT_BR_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_BR_ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>LAT_BR_ApprovalStatus__c</columns>
        <columns>LAT_BR_Client__c</columns>
        <columns>LAT_BR_ObtainedPriorityLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_BR_ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S{0}</displayFormat>
        <label>BR Client Channel Segmentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BR Client Channel Segmentations</pluralLabel>
    <recordTypes>
        <fullName>LAT_BR_CCS_OffTrade</fullName>
        <active>true</active>
        <label>BR Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_CCS_OnTrade</fullName>
        <active>true</active>
        <label>BR On Trade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_BR_CCS_VR01_ValidatesStoreSizeDetail</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISPICKVAL(LAT_BR_StoreSize__c, &quot;&quot;)) &amp;&amp; 
ISPICKVAL(LAT_BR_StoreSizeDetail__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>LAT_BR_StoreSizeDetail__c</errorDisplayField>
        <errorMessage>Please fill Store Size Detail to continue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_BR_CCS_VR02_ValidatesActiveSegUpdate</fullName>
        <active>true</active>
        <description>Validates that a record can not be modified if the LAT_BR_ApprovalStatus__c = &apos;Active&apos; and the clientes Status__c is not &apos;Novo cadastro&apos; or &apos;Não aprovado&apos;.</description>
        <errorConditionFormula>($RecordType.DeveloperName = &apos;LAT_BR_CCS_OnTrade&apos; || 
$RecordType.DeveloperName = &apos;LAT_BR_CCS_OffTrade&apos;) 
&amp;&amp; 
NOT(ISNEW()) 
&amp;&amp; 
( 
ISPICKVAL(LAT_BR_ApprovalStatus__c,&apos;Active&apos;) &amp;&amp; 
NOT( 
ISPICKVAL(LAT_BR_Client__r.Status__c,&apos;Novo cadastro&apos;) || 
ISPICKVAL(LAT_BR_Client__r.Status__c,&apos;Não aprovado&apos;) 
) 
) 
&amp;&amp; 
NOT( 
$Profile.Name = &apos;LAT_SystemAdministrator&apos; || 
$Profile.Name = &apos;Administrador do sistema&apos; || 
$Profile.Name = &apos;Business administrator&apos; || 
$Profile.Name = &apos;LAT_BusinessAdministrator&apos; || 
$Profile.Name = &apos;PR BRAZIL System Administrator&apos; 
) 
&amp;&amp; 
NOT(ISCHANGED(LAT_TriggerInUsage__c))</errorConditionFormula>
        <errorMessage>Active BR Client Channel Segmentations records can only be modified for clients with status &apos;Novo cadastro&apos; or &apos;Não aprovado&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_BR_CCS_VR03_ValidatesDraftSegUpdate</fullName>
        <active>false</active>
        <description>Validates that a record can not be modified if the LAT_BR_ApprovalStatus__c = &apos;Draft&apos; or &apos;Rejected&apos; and the clientes Status__c is not &apos;Cliente cadastrado no JDE&apos;.</description>
        <errorConditionFormula>($RecordType.DeveloperName = &apos;LAT_BR_CCS_OnTrade&apos; ||
$RecordType.DeveloperName = &apos;LAT_BR_CCS_OffTrade&apos;)
&amp;&amp;
NOT(ISNEW())
&amp;&amp;
(
(ISPICKVAL(LAT_BR_ApprovalStatus__c,&apos;Draft&apos;) ||
ISPICKVAL(LAT_BR_ApprovalStatus__c,&apos;Rejected&apos;)) &amp;&amp;
NOT(ISPICKVAL(LAT_BR_Client__r.Status__c,&apos;Cliente cadastrado no JDE&apos;) ||
ISPICKVAL(LAT_BR_Client__r.Status__c,&apos;Cliente cadastrado no CRM&apos;))
)
&amp;&amp;
NOT(
$Profile.Name = &apos;LAT_SystemAdministrator&apos; ||
$Profile.Name = &apos;Administrador do sistema&apos; ||
$Profile.Name = &apos;Business administrator&apos; ||
$Profile.Name = &apos;LAT_BusinessAdministrator&apos; ||
$Profile.Name = &apos;PR BRAZIL System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>LAT_BR_ActivitiesStartTime__c</errorDisplayField>
        <errorMessage>Draft or Rejected BR Client Channel Segmentations records can only be modified for clients with status &apos;Cliente cadastrado no JDE&apos; or &apos;Cliente cadastrado no CRM&apos;.</errorMessage>
    </validationRules>
</CustomObject>